# stm32f446-fingerprint-detection

./: .gitignore  Cargo.toml  README.md  openocd.cfg
.cargo/: config
src/: main.rs
