[package]
name = "stm32f446-fingerprint-detection"
version = "0.1.0"
authors = ["Filip Wieland <fwieland@thousandeyes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
hzgrow-r502 = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.5.0"
features = ["stm32f446", "rt"]

[dependencies.byteorder]
version = "1.3.2"
default-features = false

[profile.dev]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"
